chore: add lock file

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,7 @@ release
 *.sln
 *.sw?
 
-#lockfile
-package-lock.json
-pnpm-lock.yaml
-yarn.lock
+#tests
 /test-results/
 /playwright-report/
 /playwright/.cache/
